kubernetes/kustomize/base/backend.deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: backend 
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers: 
        - name: backend 
          image: docker.io/moukail/symfony-angular-demo-backend:latest
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: app-files
              mountPath: /var/www/html
          resources:
            requests:
              memory: "16Mi"
              cpu: "16m"
            limits:
              memory: "128Mi"
              cpu: "128m"
        - name: nginx 
          image: docker.io/library/nginx:1.30-alpine3.23-slim
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: app-files
              mountPath: /var/www/html
            - name: backend-nginx-config
              mountPath: /etc/nginx/conf.d
          resources:
            requests:
              memory: "32Mi"
              cpu: "32m"
            limits:
              memory: "128Mi"
              cpu: "128m"
      volumes:
        - name: app-files
          emptyDir: {}
        - name: backend-nginx-config
          configMap:
            name: backend-nginx-config
