kubernetes/kustomize/base/db.statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: database
          image: docker.io/library/mysql:9.7-oraclelinux9
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: database-pvc
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: database-pvc
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
