kubernetes/kustomize/base/frontend.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: docker.io/moukail/symfony-angular-demo-frontend:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "16Mi"
              cpu: "16m"
            limits:
              memory: "128Mi"
              cpu: "128m"
          volumeMounts:
            - name: frontend-nginx-config
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: frontend-nginx-config
          configMap:
            name: frontend-nginx-config
